2008-08-07  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Eliminated randomness from the test case. Removed #ifdef __MINGW32
	directive.
	* test/DefaultPieceStorageTest.cc

2008-08-07  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed memory leak in test code
	* test/AnnounceListTest.cc
	* test/DefaultPeerListProcessorTest.cc
	* test/DefaultPeerStorageTest.cc
	* test/MetaFileUtilTest.cc
	
2008-08-07  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed wrong argument passing to BitfieldMan::isBitSet()
	* src/DefaultPieceStorage.cc
	
2008-08-07  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Initialized _directIOAllowed
	* src/MultiDiskAdaptor.cc

2008-08-07  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed memory leak
	* src/GZipDecoder.cc

2008-08-07  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed memory leak
	* src/MetalinkParserStateMachine.cc

2008-08-07  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed memory leak
	* src/Dictionary.cc

2008-08-07  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed memory leak
	* src/IteratableChunkChecksumValidator.h

2008-08-07  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed unmatched malloc/free.
	* src/IteratableChunkChecksumValidator.cc
	* src/IteratableChecksumValidator.cc

2008-08-07  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Removed max chunk size check. This change fixes BUG#2040169
	* src/ChunkedDecoder.cc
	* src/ChunkedDecoder.h
	* test/ChunkedDecoderTest.cc

2008-08-05  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Implemented download speed based URI selection algorithm.
	Introduced new option --uri-selector.
	If --uri-selector=feedback is given, aria2 uses download speed observed
	in the previous downloads and chooses fastest server in the URI list.
	Currently at most 10 URIs are considered to introduce randomeness for
	finding better servers. The speed is average download speed in the
	downloads.