@@ -1,3 +1,8 @@
+2008-08-08  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
+	Limited numCommand less than or equal to the number of piece.
+	* src/RequestGroup.cc
+
 2008-08-07  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
 	Eliminated randomness from the test case. Removed #ifdef __MINGW32
